--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -32,7 +32,7 @@
 	<string name="faq_description">Najczęściej zadawane pytania</string>
 	<string name="faq">FAQ</string>
 	<string name="message_open_download_fail">Ten plik już nie istnieje</string>
-	<string name="upsell_plus_version">Przejdź na Lightning Plus, aby blokować reklamy</string>
+	<string name="upsell_plus_version">Przejdź na Magic Plus, aby blokować reklamy</string>
     <string name="action_delete_all_bookmarks">Usuń wszystkie zakładki</string>
 	<string name="shortcut_message_failed_to_add">Twój launcher nie obsługuje skrótów.</string>
 	<string name="message_added_to_homescreen">Dodano skrót do ekranu głównego</string>
@@ -242,7 +242,7 @@
 	<string name="action_history">Historia</string>
 	<string name="action_share">Udostępnij</string>
 	<string name="action_new_tab">Nowa karta</string>
-	<string name="app_name">Lightning</string>
+	<string name="app_name">Magic</string>
 	<string-array name="proxy_choices_array">
 		<item>Bez proxy</item>
 		<item>Orbot</item>
