--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -16,7 +16,7 @@
 
 <resources>
 
-    <string name="app_name">Lightning</string>
+    <string name="app_name">Magic</string>
     <string name="action_new_tab">Nova aba</string>
     <string name="action_share">Compartilhar</string>
     <string name="action_history">Histórico</string>
