--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -241,7 +241,7 @@
     <string name="settings_black_status_bar">Тёмная строка состояния</string>
     <string name="swap_bookmarks_and_tabs">Отобразить закладки в табах</string>
     <string name="unknown_size">Неизвестный размер</string>
-    <string name="upsell_plus_version">Обновите до Lightning Plus для блокировки рекламы</string>
+    <string name="upsell_plus_version">Обновите до Magic Plus для блокировки рекламы</string>
     <string name="search_engine_yandex">Яндекс</string>
     <string name="search_engine_yahoo">Yahoo</string>
     <string name="search_engine_startpage_mobile">StartPage Mobile</string>
