--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
-    <string name="app_name">Lightning</string>
+    <string name="app_name">Magic</string>
     <string name="action_new_tab">Yeni sekme</string>
     <string name="action_share">Paylaş</string>
     <string name="action_history">Geçmiş</string>
@@ -117,7 +117,7 @@
     <string name="block_ad_remote_refresh_frequency_description">Uzak dosyalar için</string>
     <string name="block_ad_refresh_now">Sunucuyu şimdi yenile</string>
 
-    <string name="block_ads_upsell_source">Seçmek için Lightning Plus\'a yükseltin</string>
+    <string name="block_ads_upsell_source">Seçmek için Magic Plus\'a yükseltin</string>
 
     <string name="block_remote_frequency_daily">Günlük</string>
     <string name="block_remote_frequency_weekly">Haftalık</string>
@@ -263,7 +263,7 @@
     <string name="message_added_to_homescreen">Ana ekrana kısayol eklendi</string>
     <string name="shortcut_message_failed_to_add">Üzgünüz, başlatıcınız kısayolları desteklemiyor.</string>
     <string name="action_delete_all_bookmarks">Tüm yer işaretlerini sil</string>
-    <string name="upsell_plus_version">Reklamları engellemek için Lightning Plus\'a geçin</string>
+    <string name="upsell_plus_version">Reklamları engellemek için Magic Plus\'a geçin</string>
     <string name="message_open_download_fail">Bu dosya artık mevcut değil</string>
 
     <string name="faq">S.S.S</string>
