--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lightning</string>
+    <string name="app_name">Magic</string>
     <string name="action_new_tab">Nueva pestaña</string>
     <string name="action_share">Compartir</string>
     <string name="action_history">Historial</string>
