--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
-    <string name="app_name">Lightning</string>
+    <string name="app_name">Magic</string>
     <string name="action_new_tab">New tab</string>
     <string name="action_share">Share</string>
     <string name="action_history">History</string>
@@ -118,7 +118,7 @@
     <string name="block_ad_remote_refresh_frequency_description">For remote hosts file</string>
     <string name="block_ad_refresh_now">Refresh hosts now</string>
 
-    <string name="block_ads_upsell_source">Upgrade to Lightning Plus to choose</string>
+    <string name="block_ads_upsell_source">Upgrade to Magic Plus to choose</string>
 
     <string name="block_remote_frequency_daily">Daily</string>
     <string name="block_remote_frequency_weekly">Weekly</string>
@@ -264,7 +264,7 @@
     <string name="message_added_to_homescreen">Shortcut added to home screen</string>
     <string name="shortcut_message_failed_to_add">Sorry, your launcher does not support shortcuts.</string>
     <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
-    <string name="upsell_plus_version">Upgrade to Lightning Plus to block ads</string>
+    <string name="upsell_plus_version">Upgrade to Magic Plus to block ads</string>
     <string name="message_open_download_fail">This file doesn\'t exist anymore</string>
 
     <string name="faq">FAQ</string>
